# opencv_training

./: README.md
first_opencv_project/: CMakeLists.txt  first.cpp
imgproc/: CMakeLists.txt  hsv.cpp  hsv_one.cpp  imgproc_sum.cpp  test.cpp
